# gitscope

./: .gitignore  AGENTS.md  DESIGN.md  LICENSE  PRD.md  README.md  pyproject.toml
src/gitscope/: __init__.py  app.py  cli.py  diff_parser.py  git_backend.py  graph.py  models.py
tests/: test_app.py  test_diff_parser.py  test_foundation.py  test_git_backend.py  test_graph.py
